# zpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: ZpcReflection.cmake
docs/: 3c_api_reference.md  3c_architecture.md  3c_infrastructure_audit.md  3c_integration_guide.md  3c_milestone_plan.md  3c_module_decomposition.md  3c_requirements.md  3c_shared_data_model.md  3c_validation_scenarios.md  README.md  application_layer_design.md  application_layer_design.rst  architecture_and_modularization.md  architecture_and_modularization.rst  async_backend_profiles.rst  async_native_queue_adapter.rst  async_runtime_abi.rst  async_runtime_abi_demo.rst  canary_gameplay_and_tuning.md  cli_and_gui_interface_exposure.md  dev_session_contexts.rst  foundation_layer.md  foundation_layer.rst  gameplay_and_mechanics.md  gameplay_api_reference.md  gameplay_architecture.md  gameplay_infrastructure_audit.md  gameplay_integration_guide.md  gameplay_mechanics_agent_prompt.md  gameplay_mechanics_benchmark_plan.md  gameplay_mechanics_implementation_roadmap.md  gameplay_mechanics_milestones.md  gameplay_mechanics_research_roadmap.md  gameplay_mechanics_risks_and_operating_loop.md  gameplay_milestone_plan.md  gameplay_module_decomposition.md  gameplay_requirements.md  gameplay_shared_data_model.md  gameplay_validation_scenarios.md  implementation_roadmap.md  (+21 more)
include/zensim/: CMakeLists.txt  Logger.hpp  Platform.hpp  ZpcAsync.hpp  ZpcCoroutine.hpp  ZpcFunction.hpp  ZpcImplPattern.hpp  ZpcIterator.hpp  ZpcMeta.hpp  ZpcResource.hpp  ZpcTaskGraph.hpp  ZpcTuple.hpp
include/zensim/3c/: Core.hpp  MathExtensions.hpp  Telemetry.hpp  ThreeCPipeline.hpp
include/zensim/audio/: AudioFoundation.hpp  AudioRuntimeModel.hpp  AudioValidation.hpp
include/zensim/container/: Bcht.hpp  Bht.hpp  Bvh.hpp  Bvs.hpp  Bvtt.hpp  ConcurrentQueue.hpp  FiniteStateMachine.h  HashTable.cpp  HashTable.hpp  RBTreeMap.hpp  SpatialHash.hpp  TileVector.hpp  Vector.hpp
include/zensim/cuda/: Cuda.cu  Cuda.h  CudaLaunchConfig.cuh
include/zensim/execution/: AsyncAwaitables.hpp  AsyncBackendProfile.hpp  AsyncEvent.hpp  AsyncExecutor.hpp  AsyncMemoryPool.hpp  AsyncNativeQueueAdapter.hpp  AsyncResourceManager.hpp  AsyncRuntime.hpp  AsyncRuntimeAbi.hpp  AsyncScheduler.hpp  Atomics.hpp  Concurrency.h  ConcurrencyPrimitive.cpp  ConcurrencyPrimitive.hpp  ExecutionGraph.hpp  ExecutionPolicy.hpp  Intrinsics.hpp  ManagedThread.cpp  ManagedThread.hpp  TracyHelper.hpp  ValidationCompare.hpp  ValidationFormat.hpp  ValidationPersistence.hpp  ValidationSchema.hpp
include/zensim/gameplay/: Core.hpp  GameplayAIInterface.hpp  GameplayAbility.hpp  GameplayCombat.hpp  GameplayEffect.hpp  GameplayEntity.hpp  GameplayEvent.hpp  GameplayInventory.hpp  GameplayMechanicsLoader.hpp  GameplayMechanicsRegistry.hpp  GameplayMechanicsSchema.hpp  GameplayPipeline.hpp  GameplayProgression.hpp  GameplaySaveLoad.hpp  GameplayTag.hpp  GameplayTelemetry.hpp  MathExtensions.hpp  Telemetry.hpp
include/zensim/geometry/: AdaptiveGrid.hpp  AdaptiveGridUtils.hpp  AdaptiveGrid_Conversion.cpp  Collider.h  LevelSet.h  PoissonDisk.hpp  SparseGrid.hpp  SparseGrid_Conversion.cpp  SparseLevelSet.hpp  Structure.hpp  Structurefree.hpp  VdbLevelSet_Conversion.cpp  VdbLevelSet_LoadPhi.cpp  VdbLevelSet_LoadPhiVel.cpp
include/zensim/gpu/: Gpu.hpp  GpuDescriptors.hpp  GpuDevice.hpp  GpuDeviceVk.hpp  GpuDeviceWebGPU.hpp  GpuScopedVk.hpp  GpuTestVk.hpp  GpuTypes.hpp  GpuVkMapping.hpp  GpuWebGPUMapping.hpp
include/zensim/graph/: ConnectedComponents.hpp
include/zensim/interface/: CanaryScenario.hpp  InterfaceServices.hpp  LocalCanaryService.hpp  LocalInterfaceServices.hpp
include/zensim/io/: ByteStream.hpp  IO.h  MeshIO.hpp
include/zensim/math/: DihedralAngle.hpp  RandomNumber.hpp  Rotation.hpp  VecInterface.hpp
include/zensim/memory/: Allocator.cpp  Allocator.h  MappedFile.hpp  MemOps.cpp  MemOps.hpp  MemoryBackend.cpp  MemoryBackend.h  MemoryResource.h
include/zensim/musa/: Musa.h
include/zensim/physics/: ConstitutiveModel.hpp
include/zensim/process/: NamedChannel.hpp  SharedMemoryRegion.hpp
include/zensim/py_interop/: Clang.cpp  GenericIterator.hpp
include/zensim/reflect/: ZpcReflectAnnotations.hpp  ZpcReflectBlueprint.hpp  ZpcReflectObject.hpp  ZpcReflectPyExport.hpp  ZpcReflectRegistry.hpp  ZpcReflectRuntime.hpp
include/zensim/render/: RenderArtifact.hpp  RenderBackendSelection.cpp  RenderBackendSelection.hpp  RenderFrameRequest.hpp  RenderManifest.cpp  RenderManifest.hpp  RenderMaterial.hpp  RenderScene.hpp  RenderTypes.hpp  RenderView.hpp
reflect_tool/: CMakeLists.txt  codegen.cpp  codegen.hpp  main.cpp  meta_data.cpp  meta_data.hpp  parser.cpp  parser.hpp  utils.cpp  utils.hpp
reflect_tool/example_srcs/: reflect_example.hpp
test/: 3c_camera.cpp  3c_character.cpp  3c_core_types.cpp  3c_input.cpp  3c_integration.cpp  3c_math_extensions.cpp  3c_perf.cpp  CMakeLists.txt  async_atomic_benchmark.cpp  async_backend_contract.cpp  async_backend_profile.cpp  async_concurrency_usecases.cpp  async_foundation.cpp  async_native_queue_adapter.cpp  async_resource_manager.cpp  async_runtime.cpp  async_runtime_abi.cpp  async_runtime_abi_demo.cpp  audio_foundation.cpp  audio_validation.cpp  concurrent_queue_benchmark.cpp  gameplay_ability.cpp  gameplay_ai_interface.cpp  gameplay_camera.cpp  gameplay_character.cpp  gameplay_combat.cpp  gameplay_core.cpp  gameplay_core_types.cpp  gameplay_effect.cpp  gameplay_input.cpp  gameplay_integration.cpp  gameplay_inventory.cpp  gameplay_math_extensions.cpp  gameplay_mechanics_loading.cpp  gameplay_perf.cpp  gameplay_progression.cpp  gameplay_saveload.cpp  gameplay_telemetry.cpp  interface_services.cpp  parallel_primitives.cpp  (+5 more)
test/network/: network_protocol_smoke.cpp  network_server_smoke.cpp  network_transport_smoke.cpp
test/render/: render_benchmark_smoke.cpp  render_capture.cpp  render_deferred.cpp  render_e2e.cpp  render_hybrid.cpp  render_pathtrace.cpp  render_postprocess.cpp  render_shadow.cpp  render_shared_scene.cpp  render_smoke.cpp  render_ssao.cpp
test/utils/: initialization.hpp
(+125 files in other folders)
